[gd_scene load_steps=4 format=2]

[ext_resource path="res://inheritance-2/basic_slime/BasicSlime.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/hp_progress.png" type="Texture" id=2]
[ext_resource path="res://assets/misc/hp_under.png" type="Texture" id=3]

[node name="BasicSlime" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
mode = 2
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -10.0
margin_top = -31.0
margin_right = 30.0
margin_bottom = -19.0
rect_scale = Vector2( 0.5, 0.5 )
text = "SLIME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuardArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="HpBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -23.0
margin_right = 8.0
margin_bottom = -19.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageLabelOrigin" type="Node2D" parent="."]
position = Vector2( 0, -36 )

[connection signal="body_entered" from="GuardArea" to="." method="_on_GuardArea_body_entered"]
[connection signal="body_exited" from="GuardArea" to="." method="_on_GuardArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
